syntax = "proto3";
option java_package = "com.draft.proto";
option java_outer_classname = "AppendVoteProtos";
option java_generate_equals_and_hash = true;
package com.draft;

message AppendEntriesRequest {
  uint64 term = 1;
  string leaderId = 2;
  uint64 prevLogIndex = 3;
  uint64 prevLogTerm = 4;
  repeated LogEntry entries = 5;
  uint64 leaderCommit = 6;
}

message LogEntry {
  uint64 term = 1;
  string command = 2;
}

message AppendEntriesResponse {
  uint64 term = 1;
  bool success = 2;
}